--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,36 @@
 version: '3.8'
 
-servisec:
-  db: 
+services:
+  db:
     image: postgres:14-alpine
+    container_name: pr_reviewer_db
+    restart: always
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: pr_reviewer
+    volumes:
+      - pr_reviewer_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: pr_reviewer_app
+    restart: always
+    environment:
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: user
+      DB_PASSWORD: password
+      DB_NAME: pr_reviewer
+      HTTP_PORT: 8080
+    ports:
+      - "8080:8080" 
+    depends_on:
+      - db
+    command: ["./wait-for-it.sh", "db:5432", "--", "./pr_reviewer_app"] 
+volumes:
+  pr_reviewer_data:
