--- a/PostgreSQL.env
+++ b/PostgreSQL.env
@@ -1,7 +1,6 @@
-# .env
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=postgres
+DB_USER=user
+DB_PASSWORD=password
 DB_NAME=pr_reviewer
 HTTP_PORT=8080
