--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:14-alpine
@@ -15,11 +13,11 @@ services:
       - "5432:5432"
 
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     container_name: pr_reviewer_app
     restart: always
+    env_file: 
+      - PostgreSQL.env
     environment:
       DB_HOST: db
       DB_PORT: 5432
@@ -28,7 +26,7 @@ services:
       DB_NAME: pr_reviewer
       HTTP_PORT: 8080
     ports:
-      - "8080:8080" 
+      - "8080:8080"
     depends_on:
       - db
     command: ["./wait-for-it.sh", "db:5432", "--", "./pr_reviewer_app"] 
